# CameraMod

./: .gitignore  CMakeLists.txt  README.md
arduino/: arduino.ino
hardware/: schema.easyeda.json
hardware/pcb/: Camera-cache.lib  Camera.kicad_prl  Camera.kicad_pro  Camera.kicad_sch  Camera.pro  Camera.sch  fp-lib-table  sym-lib-table
src/: arduino.ino  main.cpp  ws2812.pio.h
